# circt

./: 10state-lin-no-time.mlir  10states-lin-no-time.smt  20states-liveness.mlir  err-comb-constrained-input-works.smt  err-reach-constrained-input-works.smt  example-array.smt  fsm4.smt  hls-fsm-smtlib.smt  lin-new-model.smt  new-attempt.smt  new-mod.smt  output-top.smt  randomtest.xmt  test.mlir  test.smt  tmp.txt  tmp_sv_fsm  tmp_sv_fsm_2
fsm-benchmarking/: hls-fsm.mlir
fsm_examples/: bitvec_res_log.txt  fsm_tester.py  output.txt  test_bitwuzla.py
hs-dc-hw-examples/: how-to-reproduce.md  long-datapath-canonicalized-dc.mlir  long-datapath-dc-canonicalized.mlir  long-datapath-dc-esi-ports-to-hw.mlir  long-datapath-dc-esi-to-hw-arith-to-comb.mlir  long-datapath-dc-esi-to-hw.mlir  long-datapath-dc-materialized-1.mlir  long-datapath-dc-materialized-2.mlir  long-datapath-dc-materialized-after-can.mlir  long-datapath-dc-materialized.mlir  long-datapath-dc-to-hw.mlir  long-datapath-dc.mlir  long-datapath-handshake-split-merge.mlir  long-datapath-handshake.mlir  long-datapath-hw-esi-hw.mlir  long-datapath-hw-esi-ports.mlir  long-datapath-hw.mlir  long-datapath-materialized-dc.mlir  long-datapath-sv-prettified.mlir  long-datapath-sv-seq-sv.mlir  long-datapath-verilog.v
hs-hw-examples/: how-to-reproduce.md  long-datapath-handshake-esi-ports-to-hw.mlir  long-datapath-handshake-materialized.mlir  long-datapath-handshake-to-hw.mlir
simulation-example/: dc-m1-c-m2-to-hw-lowered-esi.mlir  dc-m1-c-m2-to-hw.mlir  (+7 more)
tools/circt-fsm-sync/: CMakeLists.txt  fsm-sync.cpp  fsm-sync.h
(+399 files in other folders)
